force-app/main/default/objects/Offer_hz__c/Offer_hz__c.object-meta.xml
<CustomObject>
    <label>Offer</label>
    <nameField>
        <displayFormat>O-{000000}</displayFormat>
        <label>Offer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>