force-app/main/default/objects/Offer_hz__c/fields/Amendments_hz__c.field-meta.xml
<CustomField>
    <fullName>Amendments_hz__c</fullName>
    <label>Amendments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>