force-app/main/default/objects/Offer_hz__c/fields/Buyer_s_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Buyer_s_Inquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inquiry</label>
    <referenceTo>Inquiry_hz__c</referenceTo>
    <relationshipLabel>Offers</relationshipLabel>
    <relationshipName>Offers1</relationshipName>
    <type>Lookup</type>
</CustomField>