force-app/main/default/objects/Offer_hz__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loan Fell Through</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Landlord Rejected</fullName>
            </value>
            <value>
                <fullName>Property not available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>