force-app/main/default/objects/Offer_hz__c/fields/Child_turn_18_during_the_tenancy__c.field-meta.xml
<CustomField>
    <fullName>Child_turn_18_during_the_tenancy__c</fullName>
    <label>Child turn 18 during the tenancy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>