force-app/main/default/objects/Offer_hz__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <label>(Target) Close Date</label>
    <type>Date</type>
</CustomField>