force-app/main/default/objects/Offer_hz__c/fields/Contact_LeadSource__c.field-meta.xml
<CustomField>
    <fullName>Contact_LeadSource__c</fullName>
    <label>Contact LeadSource</label>
    <length>50</length>
    <type>Text</type>
</CustomField>