force-app/main/default/objects/Offer_hz__c/fields/CounterOffer__c.field-meta.xml
<CustomField>
    <fullName>CounterOffer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Counter Offer for</label>
    <referenceTo>Offer_hz__c</referenceTo>
    <relationshipLabel>Counter Offer</relationshipLabel>
    <relationshipName>CounterOffers</relationshipName>
    <type>Lookup</type>
</CustomField>