force-app/main/default/objects/Offer_hz__c/fields/Current_Living_Arrangements__c.field-meta.xml
<CustomField>
    <fullName>Current_Living_Arrangements__c</fullName>
    <label>Current Living Arrangements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renting</fullName>
            </value>
            <value>
                <fullName>Living with Parents</fullName>
            </value>
            <value>
                <fullName>Homeowner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>