force-app/main/default/objects/Offer_hz__c/fields/How_Long_you_Intend_on_Staying__c.field-meta.xml
<CustomField>
    <fullName>How_Long_you_Intend_on_Staying__c</fullName>
    <label>How Long you Intend on Staying</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short Term</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>12 Months+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>