force-app/main/default/objects/Offer_hz__c/fields/I_wont_smoke__c.field-meta.xml
<CustomField>
    <fullName>I_wont_smoke__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I wont smoke</label>
    <type>Checkbox</type>
</CustomField>