force-app/main/default/objects/Offer_hz__c/fields/Income_30x__c.field-meta.xml
<CustomField>
    <fullName>Income_30x__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Income 30x +</label>
    <type>Checkbox</type>
</CustomField>