force-app/main/default/objects/Offer_hz__c/fields/Initial_Offer__c.field-meta.xml
<CustomField>
    <fullName>Initial_Offer__c</fullName>
    <label>Initial Offer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>