force-app/main/default/objects/Offer_hz__c/fields/Inquiry_hz__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_hz__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request</label>
    <referenceTo>Inquiry_hz__c</referenceTo>
    <relationshipLabel>Offers</relationshipLabel>
    <relationshipName>Offers</relationshipName>
    <type>Lookup</type>
</CustomField>