force-app/main/default/objects/Offer_hz__c/fields/Listing_Name__c.field-meta.xml
<CustomField>
    <fullName>Listing_Name__c</fullName>
    <description>Used to return offer record in global search</description>
    <label>Listing Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>