force-app/main/default/objects/Offer_hz__c/fields/MonthlyRent__c.field-meta.xml
<CustomField>
    <fullName>MonthlyRent__c</fullName>
    <label>Monthly Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>