force-app/main/default/objects/Offer_hz__c/fields/Mortgage_Depo_Amount__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Depo_Amount__c</fullName>
    <label>Mortgage Depo Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>