force-app/main/default/objects/Offer_hz__c/fields/Need_Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Need_Guarantor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Guarantor</label>
    <type>Checkbox</type>
</CustomField>