force-app/main/default/objects/Offer_hz__c/fields/No_adverse_credit__c.field-meta.xml
<CustomField>
    <fullName>No_adverse_credit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No adverse credit</label>
    <type>Checkbox</type>
</CustomField>