force-app/main/default/objects/Offer_hz__c/fields/Notes_hz__c.field-meta.xml
<CustomField>
    <fullName>Notes_hz__c</fullName>
    <label>Internal Notes</label>
    <type>TextArea</type>
</CustomField>