force-app/main/default/objects/Offer_hz__c/fields/of_Listing_Price__c.field-meta.xml
<CustomField>
    <fullName>of_Listing_Price__c</fullName>
    <formula>(  OfferedAmount_hz__c  /  Listing_hz__r.ListingPrice_hz__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of Listing Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>