force-app/main/default/objects/Offer_hz__c/fields/Offer_Name__c.field-meta.xml
<CustomField>
    <fullName>Offer_Name__c</fullName>
    <formula>IF( ISBLANK( Contact__r.FirstName  ) , Potential_Renter__r.FirstName, Contact__r.FirstName )&amp;&quot; &quot;&amp; IF( ISBLANK( Contact__r.LastName  ) , Potential_Renter__r.LastName, Contact__r.LastName )&amp;&quot; &quot;&amp;&quot;-&quot;&amp;&quot; &quot;&amp; Listing_hz__r.Address_hz__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Name</label>
    <type>Text</type>
</CustomField>