force-app/main/default/objects/Offer_hz__c/fields/OfferBy_hz__c.field-meta.xml
<CustomField>
    <fullName>OfferBy_hz__c</fullName>
    <label>Offer by</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Buyer</fullName>
                <default>true</default>
                <label>Buyer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>