force-app/main/default/objects/Offer_hz__c/fields/OfferedAmount_hz__c.field-meta.xml
<CustomField>
    <fullName>OfferedAmount_hz__c</fullName>
    <label>Offered Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>