force-app/main/default/objects/Offer_hz__c/fields/Potential_Commission__c.field-meta.xml
<CustomField>
    <fullName>Potential_Commission__c</fullName>
    <formula>OfferedAmount_hz__c  * 0.04</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Based on a 4% Commission of Offered Amount</inlineHelpText>
    <label>Potential Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>