force-app/main/default/objects/Offer_hz__c/fields/Potential_Renter__c.field-meta.xml
<CustomField>
    <fullName>Potential_Renter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Potential Renter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Offers (Potential Renter)</relationshipLabel>
    <relationshipName>Offer</relationshipName>
    <type>Lookup</type>
</CustomField>