force-app/main/default/objects/Offer_hz__c/fields/Reason_Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Reason_Guarantor__c</fullName>
    <label>Reason Guarantor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>