force-app/main/default/objects/Offer_hz__c/fields/Seller__c.field-meta.xml
<CustomField>
    <fullName>Seller__c</fullName>
    <label>Seller</label>
    <length>100</length>
    <type>Text</type>
</CustomField>