force-app/main/default/objects/Offer_hz__c/fields/StartingDate__c.field-meta.xml
<CustomField>
    <fullName>StartingDate__c</fullName>
    <label>Starting Date</label>
    <type>Date</type>
</CustomField>