force-app/main/default/objects/Offer_hz__c/fields/SystemHasClosedClosing__c.field-meta.xml
<CustomField>
    <fullName>SystemHasClosedClosing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SystemHasClosedClosing</label>
    <type>Checkbox</type>
</CustomField>