force-app/main/default/objects/Offer_hz__c/fields/SystemIsAccepted__c.field-meta.xml
<CustomField>
    <fullName>SystemIsAccepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SystemIsAccepted</label>
    <type>Checkbox</type>
</CustomField>