force-app/main/default/objects/Offer_hz__c/fields/SystemIsActive__c.field-meta.xml
<CustomField>
    <fullName>SystemIsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SystemIsActive</label>
    <type>Checkbox</type>
</CustomField>