force-app/main/default/objects/Offer_hz__c/fields/SystemIsCancelled__c.field-meta.xml
<CustomField>
    <fullName>SystemIsCancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SystemIsCancelled</label>
    <type>Checkbox</type>
</CustomField>