force-app/main/default/objects/Offer_hz__c/fields/SystemIsExclusive__c.field-meta.xml
<CustomField>
    <fullName>SystemIsExclusive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SystemIsExclusive</label>
    <type>Checkbox</type>
</CustomField>