force-app/main/default/objects/Offer_hz__c/fields/SystemRequestExclusivity__c.field-meta.xml
<CustomField>
    <fullName>SystemRequestExclusivity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>hook for Approval workflow</inlineHelpText>
    <label>SystemRequestExclusivity</label>
    <type>Checkbox</type>
</CustomField>