force-app/main/default/objects/Offer_hz__c/fields/Your_Situation__c.field-meta.xml
<CustomField>
    <fullName>Your_Situation__c</fullName>
    <label>Your Situation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>