force-app/main/default/objects/Offer_hz__c/recordTypes/Offer_Accepted.recordType-meta.xml
<RecordType>
    <fullName>Offer_Accepted</fullName>
    <active>false</active>
    <label>Accepted Offer</label>
</RecordType>