force-app/main/default/objects/Offer_hz__c/recordTypes/Offer_Active.recordType-meta.xml
<RecordType>
    <fullName>Offer_Active</fullName>
    <active>true</active>
    <label>Active Offer</label>
</RecordType>