force-app/main/default/objects/Offer_hz__c/recordTypes/Offer_Inactive.recordType-meta.xml
<RecordType>
    <fullName>Offer_Inactive</fullName>
    <active>false</active>
    <label>Inactive Offer</label>
</RecordType>