force-app/main/default/objects/Offer_hz__c/recordTypes/Rental_Offer.recordType-meta.xml
<RecordType>
    <fullName>Rental_Offer</fullName>
    <active>true</active>
    <label>Rental Offer</label>
</RecordType>