force-app/main/default/objects/Offer_hz__c/validationRules/accept_CheckParentExclusivity.validationRule-meta.xml
<ValidationRule>
    <fullName>accept_CheckParentExclusivity</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( ISCHANGED(SystemIsAccepted__c), SystemIsAccepted__c, AND(Listing_hz__r.SystemHasExclusiveOffer__c, NOT(SystemIsExclusive__c)) )</errorConditionFormula>
    <errorMessage>Listing is reserved.</errorMessage>
</ValidationRule>