force-app/main/default/objects/Offer_hz__c/validationRules/IsAccepted_CheckParentAlreadyAccepted.validationRule-meta.xml
<ValidationRule>
    <fullName>IsAccepted_CheckParentAlreadyAccepted</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( ISCHANGED(SystemIsAccepted__c),  SystemIsAccepted__c ,  Listing_hz__r.SystemHasAcceptedOffer__c)</errorConditionFormula>
    <errorMessage>Listing already has an accepted offer.</errorMessage>
</ValidationRule>