force-app/main/default/objects/Offer_hz__c/validationRules/IsExclusive_CheckParentExclusivity.validationRule-meta.xml
<ValidationRule>
    <fullName>IsExclusive_CheckParentExclusivity</fullName>
    <active>true</active>
    <errorConditionFormula>AND (   ISCHANGED(SystemIsExclusive__c) , SystemIsExclusive__c  ,  Listing_hz__r.SystemHasExclusiveOffer__c )</errorConditionFormula>
    <errorMessage>Listing is already reserved.</errorMessage>
</ValidationRule>