force-app/main/default/objects/Offer_hz__c/validationRules/No_offer_if_Listing_is_blocked.validationRule-meta.xml
<ValidationRule>
    <fullName>No_offer_if_Listing_is_blocked</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(Id),
ISPICKVAL(Listing_hz__r.Status__c,&apos;Blocked&apos;)
)</errorConditionFormula>
    <errorMessage>Listing is blocked, offer cannot be created</errorMessage>
</ValidationRule>