force-app/main/default/objects/Offer_hz__c/validationRules/No_offer_if_Listing_is_reserved.validationRule-meta.xml
<ValidationRule>
    <fullName>No_offer_if_Listing_is_reserved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(Id),
 Listing_hz__r.SystemHasExclusiveOffer__c
)</errorConditionFormula>
    <errorMessage>Listing is already reserved. Offer cannot be created.</errorMessage>
</ValidationRule>