force-app/main/default/objects/Offer_hz__c/validationRules/No_Offer_if_Listing_is_Sold_or_Rented.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Offer_if_Listing_is_Sold_or_Rented</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
Listing_hz__r.SystemHasAcceptedOffer__c
)</errorConditionFormula>
    <errorMessage>Offer cannot be created. A deal has already been closed for this Listing.</errorMessage>
</ValidationRule>