force-app/main/default/objects/Offer_hz__c/validationRules/reserve_CheckParentExclusivity.validationRule-meta.xml
<ValidationRule>
    <fullName>reserve_CheckParentExclusivity</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( ISCHANGED(SystemRequestExclusivity__c) , SystemRequestExclusivity__c, Listing_hz__r.SystemHasAcceptedOffer__c )</errorConditionFormula>
    <errorMessage>Listing already has an accepted offer.</errorMessage>
</ValidationRule>