force-app/main/default/objects/Offer_hz__c/listViews/All_Accepted_Offers.listView-meta.xml
<ListView>
    <fullName>All_Accepted_Offers</fullName>
    <columns>NAME</columns>
    <columns>Listing_hz__c</columns>
    <columns>Contact__c</columns>
    <columns>Price__c</columns>
    <columns>OfferedAmount_hz__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <label>My Accepted Offers</label>
</ListView>