force-app/main/default/objects/Offer_hz__c/listViews/All_Offers.listView-meta.xml
<ListView>
    <fullName>All_Offers</fullName>
    <columns>NAME</columns>
    <columns>Listing_hz__c</columns>
    <columns>Contact__c</columns>
    <columns>OfferedAmount_hz__c</columns>
    <columns>Price__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Offers</label>
</ListView>